--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <header>
 <h1>Welcome, my name is Anthony Bellinger! </h1>
 </header>
-<div class="maroon-rectangle"></div>
+<div class="maroon-rectangle">
+    <img src="myimage.jpeg" alt="My Image" class="rectangle-img">
+</div>
+<div class="maroon-circle"></div>
 </body>
 </html>
