--- a/Skills.html
+++ b/Skills.html
@@ -23,5 +23,18 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
+<header>
+    <h1>My Skills</h1>
+    <h2> My skills include a collective of interpersonal,commountcative, and technical skills. blahhhhhhhh blahhhh me blahhhhhhh and yes when it comes to this it should be at the fore fornt</h2>
+</header>
+
+<!-- Maroon Rectangle for Skills -->
+<div class="maroon-rectangle">
+    <div class="rectangle-flex">
+        <!-- Add your skills content here -->
+        <p>Skills content goes here</p>
+    </div>
+</div>
+
 </body>
 </html>
