--- a/about.html
+++ b/about.html
@@ -23,5 +23,22 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
+<header>
+    <h1>
+        About Me
+    </h1>
+</header>
+<div class="maroon-rectangle">
+    <div class="rectangle-flex">
+        <p>About Page Content Goes Here: I have the following skills</p>
+    </div>
+</div>
+<div class="maroon-rectangle-vertical">
+    <div class="rectangle-flex-vertical">
+        <p>Bottom rectangle content goes here</p>
+    </div>
+</div>
+</body>
+</html>
 </body>
 </html>
