--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,11 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
+<div class="maroon-rectangle">
+    <div class="rectangle-flex">
+        <!-- Add your contact content here -->
+        <p>Contact information or form goes here</p>
+    </div>
+</div>
 </body>
 </html>
