--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <div class="maroon-rectangle">
     <img src="myimage.jpeg" alt="My Image" class="rectangle-img">
 </div>
-<div class="maroon-circle"></div>
+<div class="maroon-circle">
+    
+</div>
 </body>
 </html>
