--- a/Skills.html
+++ b/Skills.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
     <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anthony Bellinger</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -24,15 +18,28 @@
 </ul>
 </nav>
 <header>
+    <div class="skills-rectangle1">
     <h1>My Skills</h1>
-    <h2> My skills include a collective of interpersonal,commountcative, and technical skills. blahhhhhhhh blahhhh me blahhhhhhh and yes when it comes to this it should be at the fore fornt</h2>
-</header>
+    </div>
+    </header>
+    <h2> My best skills consisit of Interpersonal and Technical skills. Balancing school and leading Organizations, these skills are very helpful. Here are my best skills that I feel I strive the best at. With practice and experience, the skills were practicied until I decided that I was proficient within these skills. From Interpersonal to my Technicals skills, these key skills were very important during my time here at Michigan State University. </h2>
+
 
 <!-- Maroon Rectangle for Skills -->
 <div class="maroon-rectangle">
     <div class="rectangle-flex">
         <!-- Add your skills content here -->
-        <p>Skills content goes here</p>
+        <p><h2>Technical Skills</h2>
+<ul>
+    <li>SQL</li>
+    <li>Python</li>
+</ul>
+
+<h2>Interpersonal Skills</h2>
+<ul>
+    <li>Communication</li>
+    <li>Collaboration</li>
+</ul></p>
     </div>
 </div>
 
