--- a/Skills.html
+++ b/Skills.html
@@ -42,6 +42,8 @@
 </ul></p>
     </div>
 </div>
-
+<div class="maroon-circle">
+    <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
+</div>
 </body>
 </html>
