--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,11 @@
         </form>
         <label for="Reason for Contact">Reason for Contact</label><br>
             <select id="Reason" name="Reason"><br>
-                <option value="Saying Howdy">Saying hi</option>
-                <option value="looking to connect">looking for a contractor</option>
-                <option value="interested in interview">interested in interview</option>
-
+                <option value="Saying Howdy">Saying Howdy</option>
+                <option value="Looking to Connect">looking to Connect</option>
+                <option value="Interested in Interview">Interested in Interview</option>
+<div class="maroon-circle">
+    <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
+</div>
 </body>
 </html>
