--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </ul>
 
     
-</div>
 </nav>
 
 
@@ -28,7 +27,7 @@
     <img src="myimage.jpeg" alt="My Image" class="rectangle-img">
 </div>
 <div class="maroon-circle">
-    
+     <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
 </div>
 </body>
 </html>
