--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
 
 
 <header>
-<h1>Welcome, my name is Anthony Bellinger! </h1>
+    <h1>Welcome, my name is Anthony Bellinger! </h1>
 </header>
-<div class="maroon-rectangle">
-    <img src="myimage.jpeg" alt="My Image" class="rectangle-img">
+
+<div class="maroon-rectangle rectangle-flex">
+    
+    <div class="rectangle-text">
+        <p>Welcome to my portfolio! Here is a small amount info about me.</p>
+    </div>
+
+    <div class="rectangle-img-container">
+        <img src="myimage.jpeg" alt="My Image" class="rectangle-img">
+    </div>
+
 </div>
+
 <div class="maroon-circle">
      <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
 </div>
-</body>
-</html>
