--- a/Skills.html
+++ b/Skills.html
@@ -22,9 +22,11 @@
     <h1>My Skills</h1>
     </div>
     </header>
-    <h2> My best skills consisit of Interpersonal and Technical skills. Balancing school and leading Organizations, these skills are very helpful. Here are my best skills that I feel I strive the best at. With practice and experience, the skills were practicied until I decided that I was proficient within these skills. From Interpersonal to my Technicals skills, these key skills were very important during my time here at Michigan State University. </h2>
+    <h2>  I've been able to develop these abilities and put them to good use by juggling my studies, leadership responsibilities, and practical experience. My strongest areas are shown by the talents listed below. I've gained expertise that has been crucial to my stay at Michigan State University through constant practice and direct application."Additionally, these skills have played a significant role in my personal growth and have strengthened my confidence and abilities.The main technical and interpersonal abilities that I commonly utilized during 2025 are listed below.   </h2>
 
 
+
+    
 <!-- Maroon Rectangle for Skills -->
 <div class="maroon-rectangle">
     <div class="rectangle-flex">
