--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
         where I began my academic journey in 2023. I am pursuing a degree in Information Science 
         with a focused track in Information Technology and Cybersecurity. My studies have equipped 
         me with a solid technical foundation, a forward-thinking mindset, and a clear commitment 
-        to advancing within the IT and cybersecurity career fields.
+        to advancing within the IT and cybersecurity career fields. I'm an extremely goal-oriented, 
+        passionate, and motivated person that takes on any challenges that come my way.
     </p>
 </section>
 
@@ -41,12 +42,16 @@
             where I help mentor students and encourage them to succeed. I also enjoy attending football games.
         </p>
     </div>
-
+        
     <div class="about-img-container">
         <img src="MSU.jpeg" alt="MSU Image" class="about-img">
     </div>
 </div>
 
+
+<p> Fun Fact: I completed and received my associate's degree while in high school.
+    
+</p>
 <!-- 🔹 Place the circle HERE at the bottom of the body -->
 <div class="maroon-circle">
     <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
