--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         
     </div>
 </div>
-<p>Fill this Out!</p>
+<h3>Fill this Out!</h3>
 <form name="contact-form" netlify>
          <Label>Name <input type="text" name="name" /></Label>
          <Label>Email <input type="email" name="email" /></Label>
@@ -61,6 +61,7 @@
                 <option value="Saying Howdy">Saying Howdy</option>
                 <option value="Looking to Connect">looking to Connect</option>
                 <option value="Interested in Interview">Interested in Interview</option>
+                </div>
 <div class="maroon-circle">
     <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
 </div>
