--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="maroon-rectangle rectangle-flex">
     
     <div class="rectangle-text">
-        <p>Welcome to my portfolio! Here is a small amount info about me.</p>
+        <p>Welcome to my portfolio! Here is some interesting information and facts about me.</p>
     </div>
 
     <div class="rectangle-img-container">
