--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <div class="about-rectangle">About Me</div>
     </h1>
 </header>
-
+<h2> Description :</h2>
 <section>
     <p>
         My name is Anthony Bellinger, and I am currently a Senior at Michigan State University, 
@@ -52,7 +52,7 @@
 <p> Fun Fact: I completed and received my associate's degree while in high school.
     
 </p>
-<!-- 🔹 Place the circle HERE at the bottom of the body -->
+
 <div class="maroon-circle">
     <img src="Brand_Logo.png" alt="Brand Logo" class="circle-img">
 </div>
