--- a/Skills.html
+++ b/Skills.html
@@ -22,16 +22,17 @@
     <h1>My Skills</h1>
     </div>
     </header>
-    <h2>  I've been able to develop these abilities and put them to good use by juggling my studies, leadership responsibilities, and practical experience. My strongest areas are shown by the talents listed below. I've gained expertise that has been crucial to my stay at Michigan State University through constant practice and direct application."Additionally, these skills have played a significant role in my personal growth and have strengthened my confidence and abilities.The main technical and interpersonal abilities that I commonly utilized during 2025 are listed below.   </h2>
+    <h2> Description : </h2>
+    <p>  I've been able to develop these abilities and put them to good use by juggling my studies, leadership responsibilities, and practical experience. My strongest areas are shown by the talents listed below. I've gained expertise that has been crucial to my stay at Michigan State University through constant practice and direct application.Additionally, these skills have played a significant role in my personal growth and have strengthened my confidence and abilities.The main technical and interpersonal abilities that I commonly utilized during 2025 are listed below.   </p>
 
 
 
     
-<!-- Maroon Rectangle for Skills -->
+
 <div class="maroon-rectangle">
     <div class="rectangle-flex">
-        <!-- Add your skills content here -->
-        <p><h2>Technical Skills</h2>
+       
+        <h3>Technical Skills</h3>
 <ul>
     <li>SQL</li>
     <li>Python</li>
