Last Big change

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Anthony Bellinger - About</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -30,7 +31,7 @@
         where I began my academic journey in 2023. I am pursuing a degree in Information Science 
         with a focused track in Information Technology and Cybersecurity. My studies have equipped 
         me with a solid technical foundation, a forward-thinking mindset, and a clear commitment 
-        to advancing within the IT and cybersecurity career fields. I'm an extremely goal-oriented, 
+        to advance within the IT and cybersecurity career fields. I'm an extremely goal-oriented, 
         passionate, and motivated person that takes on any challenges that come my way.
     </p>
 </section>
@@ -45,6 +46,7 @@
         
     <div class="about-img-container">
         <img src="MSU.jpeg" alt="MSU Image" class="about-img">
+        <small>Source: Michigan State University (msu.edu)</small>
     </div>
 </div>
 
